--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "D00"]
 	path = D00
 	url = git@github.com:Sylsee/D00.git
+[submodule "D01"]
+	path = D01
+	url = git@github.com:Sylsee/D01.git
