--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "D01"]
 	path = D01
 	url = git@github.com:Sylsee/D01.git
+[submodule "D02"]
+	path = D02
+	url = git@github.com:Sylsee/D02.git
